Move js, css into own olders, create old & testing components, renaming

--- a/Graph Comparison/GraphComparison.html
+++ b/Graph Comparison/GraphComparison.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset = "utf-8">
     <script src = "https://d3js.org/d3.v5.min.js"></script>
-    <link rel='stylesheet' type='text/css' href='ICLFashion.css'/>
+    <link rel='stylesheet' type='text/css' href='../css/ICLFashion.css'/>
     <!--<script src = "d3.min.js"></script>-->
   </head>
   <body>
@@ -108,7 +108,7 @@
       <button type="submit" action="javascript:void(0);" onClick="showAnims('graph');">Show Graphs</button>
       <button type="submit" action="javascript:void(0);" onClick="showAnims('anim');">Show Anim</button>
 
-    <script src="ICL_Classes.js"></script>
-    <script src = "superclass.js"></script>
+    <script src="../js/ICL_Classes.js"></script>
+    <script src = "../js/superclass.js"></script>
   </body>
 </html>
