Add new graph and field implementation to diskAlgs, move cS.html to OLD

--- a/Old Components/old_diskAlgs.html
+++ b/Old Components/old_diskAlgs.html
@@ -388,43 +388,8 @@
     </div>
 
     </div>
-    <!--
-    <script src='circleShowcase.js'></script>
-    -->
-    <div style="width:100%;margin: 0 auto;">
-        <svg id="anim0">
 
-          <svg border:"1px solid black" height=100px id="backGround" width=100px viewBox="0 0 100 100">
-            <text x=50 y=5 style="font-size:5;text-anchor:middle">Search and Exit</text>
-            <text id="Desc0" x=50 y=8 style="font-size:3;text-anchor:middle"> Wireless</text>
-          </svg>
-          <svg border:"1px solid black" height=100px id="lines" width=100px viewBox="0 0 100 100"></svg>
-          <svg border:"1px solid black" height=100px id="bots" width=100px viewBox="0 0 100 100"></svg>
-          <svg border:"1px solid black" height=100px id="overLay" width=100px viewBox="0 0 100 100">
-            <line x1=50 y1=25 x2=50 y2=75 style="stroke:#000000;stroke-width:.25"></line>
-            <line x1=25 y1=50 x2=75 y2=50 style="stroke:#000000;stroke-width:.25"></line>
-            <circle id="center" cx=50 cy=50 r=.5 style="fill:#ffffff;stroke:#000000;stroke-width:.1"></circle>
-          </svg>
-        </svg>
-        <svg id="graph0">
-          <svg border:"1px solid black" height=100px id="backGround" width=100px viewBox="0 0 100 100">
-            <text id="timeText" x=1 y=11 style="font-size:8">Time: 0</text>
-            <text id="frameText" x=1 y=18 style="font-size:8">Frame: 0</text>
-            <rect height=4 width=100 style="fill:none;stroke:#000000;stroke-width:.25"></rect>
-            <rect id="timeSlide" height=4 width=4 style="fill:#888888"></rect>
-            <path d="M10,50L10,90L90,90" style="fill:none;stroke:#000000;stroke-width:.25"></path>
-            <text x=15 y=70 transform="rotate(-90,10,75)" style="fill:#000000;font-size:5;text-anchor:middle">Dist. from Exit(radius)</text>
-            <text x=50 y=98 style="fill:#000000;font-size:5;text-anchor:middle">Time(seconds)</text>
-          </svg>
-          <svg border:"1px solid black" height=100px id="lines" width=100px viewBox="0 0 100 100"></svg>
-          <svg border:"1px solid black" height=100px id="bots" width=100px viewBox="0 0 100 100"></svg>
-          <svg border:"1px solid black" height=100px id="overLay" width=100px viewBox="0 0 100 100"></svg>
-          <svg border:"1px solid black" height=100px id="excess" width=100px viewBox="0 0 100 100">
-          </svg>
-        </svg>
-    </div>
-    <script src="../js/ICL_Classes.js"></script>
-    <script src="../js/superclass.js"></script>
+    <script src='../disk/circleShowcase.js'></script>
 
 </body>
 
