--- a/disk/diskAlgs.html
+++ b/disk/diskAlgs.html
@@ -420,9 +420,8 @@
         </div>
 
         </div>
-    <script src='circleShowcase.js'></script>
+    <!-- <script src='circleShowcase.js'></script> -->
 
-    <!--
         <h4>Input a number to choose an exit angle.</h4>
         <input id="exitAngle" type=number min=0 max=360 />
         <input type="submit" onclick="exitChosen();">
@@ -460,7 +459,6 @@
         </div>
         <script src="../js/ICL_Classes.js"></script>
         <script src="../js/superclass.js"></script>
-    -->
 
 </body>
 
