--- a/disk/diskAlgs.html
+++ b/disk/diskAlgs.html
@@ -431,14 +431,13 @@
                 <svg border:"1px solid black" height=100px id="backGround" width=100px viewBox="0 0 100 100">
                     <text x=50 y=5 style="font-size:5;text-anchor:middle">Search and Exit</text>
                     <text id="Desc0" x=50 y=8 style="font-size:3;text-anchor:middle"> Wireless</text>
-                </svg>
-                <svg border:"1px solid black" height=100px id="lines" width=100px viewBox="0 0 100 100"></svg>
-                <svg border:"1px solid black" height=100px id="bots" width=100px viewBox="0 0 100 100"></svg>
-                <svg border:"1px solid black" height=100px id="overLay" width=100px viewBox="0 0 100 100">
                     <line x1=50 y1=25 x2=50 y2=75 style="stroke:#000000;stroke-width:.25"></line>
                     <line x1=25 y1=50 x2=75 y2=50 style="stroke:#000000;stroke-width:.25"></line>
                     <circle id="center" cx=50 cy=50 r=.5 style="fill:#ffffff;stroke:#000000;stroke-width:.1"></circle>
                 </svg>
+                <svg border:"1px solid black" height=100px id="lines" width=100px viewBox="0 0 100 100"></svg>
+                <svg border:"1px solid black" height=100px id="bots" width=100px viewBox="0 0 100 100"></svg>
+                <svg border:"1px solid black" height=100px id="overLay" width=100px viewBox="0 0 100 100"></svg>
             </svg>
             <svg id="graph0">
                 <svg border:"1px solid black" height=100px id="backGround" width=100px viewBox="0 0 100 100">
