Revert iclVisual to be self-contained.

--- a/disk/comparison.html
+++ b/disk/comparison.html
@@ -82,9 +82,9 @@
     function exitChosen() {
         //clear motor
         clearInterval(theMotor);
-        d3.selectAll("#bots").html(null);
-        d3.selectAll("#lines").html(null);
-        d3.selectAll("#overLay").html(null);
+        //d3.selectAll("#bots").html(null);
+        //d3.selectAll("#lines").html(null);
+        //d3.selectAll("#overLay").html(null);
         d3.selectAll(".timeSlide").remove();
         d3.selectAll(".timeText").remove();
         d3.selectAll(".frameText").remove();
