--- a/disk/diskAlgs.html
+++ b/disk/diskAlgs.html
@@ -423,7 +423,7 @@
     <!-- <script src='circleShowcase.js'></script> -->
 
         <h4>Input a number to choose an exit angle.</h4>
-        <input id="exitAngle" onchange="exitPreview();" type=number min=0 max=360 />
+        <input id="exitAngle" onchange="exitPreview();" type=number min=0 max=360 value=0 />
         <input type="submit"  onclick="javascript:void(0);" value="Preview Exit Location"/>
         <input type="submit" onclick="exitChosen();">
         <div style="width:100%;margin: 0 auto;">
