--- a/disk/circleShowcase.html
+++ b/disk/circleShowcase.html
@@ -26,6 +26,7 @@
 
             <ul>
                 <li><a href="diskSelect.html">Algorithms on a Disk</a></li>
+                <li><a href="compSelect.html">Compare Disk Algorithms</a></li>
             </ul>
         </div>
 
