Add algorithm description for 4 and 8 helpers.

--- a/disk/comparison.html
+++ b/disk/comparison.html
@@ -541,7 +541,7 @@
                     */
 
                 ];
-                algName = "2 Priority + 1 Servant (1) ";
+                algName = "2 Priority + 1 Helper (1) ";
                 currentCategory = "multipriority";
                 break;
 
@@ -551,7 +551,7 @@
                     [["GoToExit", [null, true]], ["GoToWallAtAngle", [0]], ["FollowWall", ["right"]]],
                     [["Wait", [null]], ["GoToWallAtAngle", 180], ["FollowWall", ["left"]]]
                 ];
-                algName = "2 Priority + 1 Servant (2) ";
+                algName = "2 Priority + 1 Helper (2) ";
                 currentCategory = "multipriority";
                 break;
 
@@ -563,7 +563,7 @@
                     [["Wait", [null]], ["GoToWallAtAngle", [75]], ["FollowWall", ["left"]]],
                     [["Wait", [null]], ["GoToWallAtAngle", [285]], ["FollowWall", ["right"]]]
                 ];
-                algName = "1 Priority + 4 Servants ";
+                algName = "1 Priority + 4 Helpers ";
                 currentCategory = "bigpriority";
                 break;
 
@@ -579,7 +579,7 @@
                     [["Wait", [null]], ["GoToWallAtAngle", [270]], ["FollowWall", ["right", 30]], ["Wait", [null]]],
                     [["Wait", [null]], ["GoToWallAtAngle", [240]], ["FollowWall", ["right"]], ["Wait", [null]]]
                 ];
-                algName = "1 Priority + 8 Servants ";
+                algName = "1 Priority + 8 Helpers ";
                 currentCategory = "bigpriority";
                 break;
         }
